terraform/service.tf
resource "aws_ecs_service" "this" {
  name                               = "${local.cluster_name}-service-${var.env}"
  cluster                            = aws_ecs_cluster.this.id
  task_definition                    = aws_ecs_task_definition.this.arn
  desired_count                      = 1
  deployment_minimum_healthy_percent = 100
  deployment_maximum_percent         = 500
  launch_type                        = "FARGATE"
  scheduling_strategy                = "REPLICA"

  network_configuration {
    security_groups  = [aws_security_group.ecs_tasks.id]
    subnets          = module.vpc.private_subnets
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.this.arn
    container_name   = "${local.cluster_name}-container-${var.env}"
    container_port   = var.container_port
  }

  lifecycle {
    ignore_changes = []
  }
}
